tests/compile-tests/eq_range.stderr
error: Use '..' for range constraints
 --> $DIR/eq_range.rs:7:26
  |
7 |   c!(x + y + 2*z + 1 in 0..=1);
  |                          ^^^

error: Use '..' for range constraints
 --> $DIR/eq_range.rs:8:25
  |
8 |   c!(x + y + 2*z + 1 in ..=1);
  |                         ^^^
